Fixes header h1 on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -114,7 +114,7 @@ ul li:before {
 
 @media all and (max-width: 600px) {
   header h1 {
-    font-size: 3em;
+    font-size: 2em;
   }
   header h2 {
     font-size: 1em;
